--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:wJTF3psOZ5kBkzIIfOSHCs8yzf+rv2uKra2fU9E3hO4=
+APP_KEY=base64:4GQiddtBO5Ot7OjgIyJ7YpVOMK8d6A6TVklQMKNs1zM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,7 +8,7 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=database
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=Hotel
